# public/swagger-stock-api.json
@@ -249,16 +249,7 @@
                     "type": "string",
                     "description": "The market the stock is in.",
 					"required": true
-                },
-                "relation": {
-                    "type": "string",
-                    "description": "Type of stock trigger (stockGT)",
-					"required": true
-                },
-				"inThreshold": {
-					"type": "boolean",
-					"description": "Always set to false. Used for limiting the amount of times a recipe can trigger."
-				}
+                }
             }
         },
 		"ltStock": {
@@ -292,16 +283,7 @@
                     "type": "string",
                     "description": "The market the stock is in.",
 					"required": true
-                },
-                "relation": {
-                    "type": "string",
-                    "description": "Type of stock trigger (stockLT)",
-					"required": true
-                },
-				"inThreshold": {
-					"type": "boolean",
-					"description": "Always set to false. Used for limiting the amount of times a recipe can trigger."
-				}
+                }
             }
         },
 		"piStock": {
@@ -335,16 +317,7 @@
                     "type": "string",
                     "description": "The market the stock is in.",
 					"required": true
-                },
-                "relation": {
-                    "type": "string",
-                    "description": "Type of stock trigger (stockPerInc)",
-					"required": true
-                },
-				"inThreshold": {
-					"type": "boolean",
-					"description": "Always set to false. Used for limiting the amount of times a recipe can trigger."
-				}
+                }
             }
         },
         "pdStock": {
@@ -378,16 +351,7 @@
                     "type": "string",
                     "description": "The market the stock is in.",
 					"required": true
-                },
-                "relation": {
-                    "type": "string",
-                    "description": "Type of stock trigger (stockPerDec)",
-					"required": true
-                },
-				"inThreshold": {
-					"type": "boolean",
-					"description": "Always set to false. Used for limiting the amount of times a recipe can trigger."
-				}
+                }
             }
         },
 		 "cpStock": {
@@ -416,11 +380,6 @@
 				"market": {
                     "type": "string",
                     "description": "The market the stock is in.",
-					"required": true
-                },
-                "relation": {
-                    "type": "string",
-                    "description": "Type of stock trigger (closePrice)",
 					"required": true
                 }
             }
